4.3
===
- Jetty maven plugin changed its groupId. In the root pom.xml of your project, replace :

    <groupId>org.mortbay.jetty</groupId>
  by
    <groupId>org.eclipse.jetty</groupId>

- Rename all your sjs files from .sjs to .groovy and update your application.groovy content to reflect this change.

- JasperReports plugin changed from codehaus to to alexnederlof
  (https://github.com/alexnederlof/Jasper-report-maven-plugin).

  Replace your JasperReports compilation section in core/pom.xml by the following one :
      <plugin>
        <groupId>com.alexnederlof</groupId>
        <artifactId>jasperreports-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>jasper</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputDirectory>${project.build.directory}/generated-resources/jasperreports</outputDirectory>
        </configuration>
      </plugin>

- Flex has been upgraded to the latest 4.15 version. If necessary in your project, change all dependencies :

  from
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>flex-framework</artifactId>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>framework</artifactId>
        <type>swc</type>
        <scope>external</scope>
      </dependency>
  to
      <dependency>
        <groupId>org.apache.flex</groupId>
        <artifactId>framework</artifactId>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>com.adobe.flash</groupId>
        <artifactId>framework</artifactId>
        <type>pom</type>
      </dependency>

- We have moved to Apache BlazeDS implementation, so replace all blazeds dependencies sections in your webapp modules
  by the following one :
      <dependency>