@@ -1,5 +1,11 @@
 4.3
 ===
+- In order to implement https://github.com/jspresso/jspresso-ce/issues/187, the org.jspresso.framework.action.IAction
+  interface now extends org.jspresso.framework.util.exception.IExceptionHandler. This shuld not require any modification
+  to existing code unless you directly implement org.jspresso.framework.action.IAction without inheriting
+  org.jspresso.framework.application.action.AbstractAction. In the latter case, you have now to implement the method
+  public boolean handleException(Throwable ex, Map<String, Object> context)
+
 - Jetty maven plugin changed its groupId. In the root pom.xml of your project, replace :
 
     <groupId>org.mortbay.jetty</groupId>
